Fixed endpoints. Improved courses table